--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,27 @@
 [[source]]
+
 url = "https://pypi.org/simple"
+
 name = "pypi"
+
 verify_ssl = true
 
+ 
+
 [packages]
+
 flask = "*"
 
+flask-cors = "*"
+
+ 
+
 [requires]
-python_version = "3.4"
+
+python_version = ">=3.4"
+
+ 
 
 [dev-packages]
+
+ 
