--- a/GKE/student-deployment.yaml
+++ b/GKE/student-deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: student-api
-  labels:
-    app: student-api
 spec:
   replicas: 2 
   selector:
@@ -20,4 +18,7 @@ spec:
         ports:
         - name: web
           containerPort: 5050
-      restartPolicy: Always
+        readinessProbe:
+          httpGet:
+            path: /students
+            port: web 
