--- a/GKE/student-service.yaml
+++ b/GKE/student-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
     selector:
         app: student-api
-    type: LoadBalancer
+    #type: LoadBalancer
     ports:
     - port: 5050
       targetPort: 5050
