--- a/GKE/student-deployment.yaml
+++ b/GKE/student-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: student-api
         image: us-central1-docker.pkg.dev/nitin-project-gcp/sims/student-api:latest
+        imagePullPolicy: Always
         ports:
         - name: web
           containerPort: 5050
@@ -22,3 +23,10 @@ spec:
           httpGet:
             path: /students
             port: web 
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
