--- a/GKE/student-deployment.yaml
+++ b/GKE/student-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           containerPort: 5050
         readinessProbe:
           httpGet:
-            path: /students
+            path: /api/v1/students
             port: web
         resources:
           requests:
